# online_training

./: .env.sample  Dockerfile  README.md  docker-compose.yaml  online_training_data.json  pyproject.toml
config/: settings.py  urls.py
lms/: admin.py  models.py  paginators.py  serializers.py  tasks.py  tests.py  urls.py  validators.py  views.py
lms/migrations/: 0001_initial.py  0002_lesson_lesson_course.py  0003_alter_lesson_lesson_course.py  0004_course_owner_lesson_owner.py  0005_subscription.py
users/: admin.py  models.py  permissions.py  serializers.py  services.py  urls.py  views.py
users/fixtures/: groups_data.json  payment_data.json
users/management/commands/: csu.py
users/migrations/: 0001_initial.py  0002_alter_user_options_remove_user_username_user_avatar_and_more.py  0003_payment.py  0004_alter_payment_payment_date.py  0005_payment_link_to_payment_payment_session_id.py
