[tool.poetry]
name = "online-training"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"


[tool.poetry.group.dependence.dependencies]
django = "4.2.2"
pillow = "^11.0.0"
djangorestframework = "^3.15.2"
psycopg2 = "^2.9.10"
python-dotenv = "^1.0.1"
django-filter = "^24.3"
djangorestframework-simplejwt = "^5.3.1"
ipython = "^8.29.0"
coverage = "^7.6.8"


[tool.poetry.group.dependence_stripe.dependencies]
stripe = "^11.3.0"


[tool.poetry.group.dependence_task.dependencies]
redis = "^5.2.1"
celery = "^5.4.0"
eventlet = "^0.38.0"
django-celery-beat = "^2.7.0"


[tool.poetry.group.dependence_doc.dependencies]
drf-yasg = "^1.21.8"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
